<resources>
    <string name="app_name">TwinSync</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full name</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="copy_code">Copy Code</string>
    <string name="your_invite_code_will_appear_here">Your invite code will appear here</string>
    <string name="create_invite_code">Create Invite Code</string>
    <string name="enter_invite_code">Enter invite code</string>
    <string name="accept_invitation">Accept Invitation</string>
    <string name="unlink_partner">Unlink Partner</string>
    <string name="last_updated">Last Updated: -</string>
    <string name="mood">Mood: -</string>
    <string name="gps">GPS: -</string>
    <string name="steps">Steps: -</string>
    <string name="battery">Battery: -</string>
    <string name="partner_battery">Battery: %1$s</string>
    <string name="partner_steps">Steps: %1$s</string>
    <string name="partner_gps">GPS: %1$s, %2$s</string>
    <string name="partner_mood">Mood: %1$s</string>
    <string name="partner_updated_at">Last Updated: %1$s</string>
    <string name="logout">Logout from this device</string>
    <string name="loading">loading...</string>
</resources>